🏋🗻 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </p>
     
     <span id = "attemptsDisplay" class = "hidden">
-      Attempts: 3
+      Attempts Remaining: 3
     </span>
     
     <button id="startBtn" onclick = "startGame()">
